--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 *.ts linguist-language=TypeScript
-# *.html linguist-language=HTML
-# *.css linguist-language=SCSS
+*.html linguist-language=HTML
+*.scss linguist-language=SCSS
